# vault

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vault_prd.docx  vite.config.ts  vite.config.web.ts
.claude/: settings.local.json
.github/workflows/: release.yml
server/: Cargo.toml  DEPLOY.md
server/src/: git.rs  main.rs  search.rs  settings.rs  vault.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs  search.rs  settings.rs  vault.rs
src-tauri/tests/: vault_flow.rs
src/components/: EditorWindow.tsx  TokenGate.tsx  WelcomeScreen.tsx  ui.tsx
src/components/editor/: Breadcrumb.tsx  EditorPane.tsx  RawEditor.tsx  RichEditor.tsx  wikilink.tsx
src/components/git/: CommitDialog.tsx
src/components/inspector/: Inspector.tsx
src/components/layout/: FourPanelLayout.tsx  MobileLayout.tsx  StatusBar.tsx
src/components/notelist/: NoteListPane.tsx  SearchPanel.tsx
src/components/palette/: CommandPalette.tsx  QuickOpen.tsx
src/components/pulse/: PulseView.tsx
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: Sidebar.tsx
src/hooks/: useAutoGit.ts  useDebouncedSave.ts  useShortcuts.ts
src/lib/: dates.test.ts  dates.ts  filtering.ts  ipc.ts  ipc.web.ts  types.ts  wikilinks.test.ts  wikilinks.ts  windows.ts  windows.web.ts
src/store/: vaultStore.ts
tasks/: todo.md
