[package]
name = "vault-server"
version = "0.1.0"
edition = "2021"
description = "Vault web server — HTTP API + static file server for browser / PWA access"

[[bin]]
name = "vault-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
gray_matter = "0.3"
walkdir = "2"
dirs = "6"
