[package]
name = "vault"
version = "0.2.0"
description = "Vault — a local-first, git-backed personal knowledge base"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
gray_matter = "0.3"
walkdir = "2"
dirs = "6"

[profile.release]
codegen-units = 1
lto = true
strip = true
